# pmit

./: .env  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  output.txt  pmit.db  pmit.db-shm  rustfmt.toml
databases/: trades.db  training.db  user_history.db
notes_for_future/: about_staleness.md  about_staleness.txt  reasons_for_db_handler_not_owning_connection.md  structure_refactor_plan.md
python_modules/: exposure_scorer.py  exposure_worker.py
scripts/: export_training_samples_csv.py  import_training_samples_csv.py  label_exposition_with_llm.py  manual_label_exposure.py  polymarket_debug.py  remove_sells_from_trades.py  remove_trades_raw_json_column.py  sample_trades_to_training_db.py  update_silver_labels.py  view_db.py
src/: config.rs  database_handler.rs  db.rs  lib.rs  main.rs  trade_filter.rs
src/data_structures/: event.rs  market.rs  mod.rs  trade.rs
src/exposure/: mod.rs
src/ingestor/: mod.rs
src/investigator/: distribution.rs  investigation.rs  mod.rs  table_printer.rs  user_activity_profiler.rs
src/polymarket/: data_api.rs  gamma_api.rs  mod.rs  ws.rs
