[package]
name = "pmit"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
dotenvy = "0.15.7"
anyhow = "1.0.86"
lru = "0.16.3"
futures-util = "0.3.32"
rusqlite = { version = "0.37.0", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
